add support for FC schema. Warning: new MIW does not accept this format for whoknows reason