@@ -22,12 +22,18 @@ package org.eclipse.tractusx.selfdescriptionfactory.service.converter.fcformat;
 
 import lombok.RequiredArgsConstructor;
 import org.eclipse.tractusx.selfdescriptionfactory.SDFactory;
+import org.eclipse.tractusx.selfdescriptionfactory.Utils;
 import org.eclipse.tractusx.selfdescriptionfactory.model.vrel3.ServiceOfferingSchema;
 import org.eclipse.tractusx.selfdescriptionfactory.service.converter.TermsAndConditionsHelper;
 import org.eclipse.tractusx.selfdescriptionfactory.service.wallet.CustodianWallet;
 import org.springframework.context.annotation.Profile;
 import org.springframework.core.convert.converter.Converter;
 import org.springframework.stereotype.Component;
+
+import java.util.List;
+import java.util.Map;
+import java.util.function.Consumer;
+import java.util.function.Function;
 
 @Component
 @RequiredArgsConstructor
@@ -39,13 +45,12 @@ public class ServiceOfferingSDConverter implements Converter<ServiceOfferingSche
 
     @Override
     public SDFactory.SelfDescription convert(ServiceOfferingSchema serviceOfferingSchema) {
-        /*
-        var serviceOfferingSD = new ServiceOfferingSD();
-        serviceOfferingSD.put("@context", ImmutableMap.of(
-                "gx", "https://w3id.org/gaia-x/gax-trust-framework#",
-                "gax-core", "https://w3id.org/gaia-x/core#",
-                "ctxsd", "https://w3id.org/catena-x/core#",
-                "xsd", "http://www.w3.org/2001/XMLSchema#"
+        var serviceOfferingSD = new SDFactory.SelfDescription(List.of(), serviceOfferingSchema.getHolder(), serviceOfferingSchema.getIssuer(), serviceOfferingSchema.getExternalId(), null);
+        serviceOfferingSD.put("@context", Map.of(
+                        "gx", "https://w3id.org/gaia-x/gax-trust-framework#",
+                        "gax-core", "https://w3id.org/gaia-x/core#",
+                        "ctxsd", "https://w3id.org/catena-x/core#",
+                        "xsd", "http://www.w3.org/2001/XMLSchema#"
                 )
         );
         serviceOfferingSD.put("@id", custodianWallet.getWalletData(serviceOfferingSchema.getHolder()).get("did"));
@@ -53,10 +58,10 @@ public class ServiceOfferingSDConverter implements Converter<ServiceOfferingSche
         serviceOfferingSD.put("ctxsd:connector-url", "https://connector-placeholder.net");
         //WARNING! In Trust Framework specs it is called 'providedBy'
         //but in FC it is referred as 'gax-core:offeredBy'
-        serviceOfferingSD.put("gax-core:offeredBy", ImmutableMap.of(
+        serviceOfferingSD.put("gax-core:offeredBy", Map.of(
                 "@id", serviceOfferingSchema.getProvidedBy())
         );
-        serviceOfferingSD.put("gx:dataAccountExport", ImmutableMap.of(
+        serviceOfferingSD.put("gx:dataAccountExport", Map.of(
                 "gx:requestType", "email",
                 "gx:accessType", "digital",
                 "gx:formatType", "json")
@@ -70,24 +75,32 @@ public class ServiceOfferingSDConverter implements Converter<ServiceOfferingSche
                 .map(l -> l.size() == 1 ? l.iterator().next() : l)
                 .ifPresent(setter.set("gx:aggregationOf"));
         setter.set("gx:termsAndConditions").accept(
-                Utils.getNonEmptyListFromCommaSeparated(serviceOfferingSchema.getTermsAndConditions(), url -> termsAndConditionsHelper.getTermsAndConditions(url, "gx:"))
-                    .map(l -> l.size() == 1 ? l.iterator().next() : l)
-                    .map(Object.class::cast)
-                    .orElse(ImmutableMap.of(
-                            "gx:content", ImmutableMap.of(
-                                    "@type", "xsd:anyURI",
-                                    "@value", "http://example.org/tac-placeholder"),
-                            "gx:hash", "1234")
-                    )
+                Utils.getNonEmptyListFromCommaSeparated(
+                                serviceOfferingSchema.getTermsAndConditions(),
+                                url -> termsAndConditionsHelper.getTermsAndConditions(
+                                        url,
+                                        u -> Map.of("gx:content",
+                                                Map.of("@type", "xsd:anyURI",
+                                                        "@value", u
+                                                )
+                                        ),
+                                        h -> Map.of("gx:hash", h)
+                                )
+                        ).map(l -> l.size() == 1 ? l.iterator().next() : l)
+                        .orElse(Map.of(
+                                "gx:content", Map.of(
+                                        "@type", "xsd:anyURI",
+                                        "@value", "http://example.org/tac-placeholder"),
+                                "gx:hash", "1234")
+                        )
         );
         setter.set("gx:policy").accept(
-                Utils.getNonEmptyListFromCommaSeparated(serviceOfferingSchema.getPolicies(), Function.identity())
-                        .map(Object.class::cast)
+                Utils.getNonEmptyListFromCommaSeparated(
+                                serviceOfferingSchema.getPolicies(),
+                                Function.identity()
+                        ).map(l -> l.size() == 1 ? l.iterator().next() : l)
                         .orElse("policy_placeholder")
         );
         return serviceOfferingSD;
-
-         */
-        return null;
     }
 }
